/*
 * $Id$
 */

2010-06-02 12:36 UTC-0500 Teo Fonrouge (teo/at/windtelsoft/dot/com)
  *  include/wxHarbour/wxh.h
  *  src/wxbase/baseclasses/wx_Window.cpp
  *  src/wxbase/baseclasses/wxhWindow.prg
     % removed PRG level Validate and using C++ method, now
       the validation for ctrls is automatically done at C++ level

  *  src/common/wxhfuncs.prg
     ! Fixed condition that wasn't allowing to set warningBlock
     ! Fixed don't call ::EvalWarnBlock twice on ctrl update/exit

  *  src/hrbcompat/tbrowse/wxhBrowse.prg
     ! Fixed getting the 'real' parent on GetBrowseParent()

  *  src/raddox/TField.prg
     % using ::GetLabel instead of ::Name on some messages/warnings
     ! Fixed getting value of calculated field's on IsValid()
     * using GetAsVariant on SetKeyVal

  *  src/raddox/TTable.prg
     * removed debug call

2010-05-31 23:29 UTC-0500 Teo Fonrouge (teo/at/windtelsoft/dot/com)
  *  config/tmpl_hrb.bkl
     ! Fixed linking html libs under Win/MinGW

  *  demos/dbExplorer/makefile.bcc
  *  demos/dbExplorer/makefile.gcc
  *  demos/dbExplorer/makefile.vc
  *  demos/helloworld/makefile.bcc
  *  demos/helloworld/makefile.gcc
  *  demos/helloworld/makefile.vc
  *  samples/arrbrowser/makefile.bcc
  *  samples/arrbrowser/makefile.gcc
  *  samples/arrbrowser/makefile.vc
  *  samples/auinotebook/makefile.bcc
  *  samples/auinotebook/makefile.gcc
  *  samples/auinotebook/makefile.vc
  *  samples/bitmapButton/makefile.bcc
  *  samples/bitmapButton/makefile.gcc
  *  samples/bitmapButton/makefile.vc
  *  samples/button/makefile.bcc
  *  samples/button/makefile.gcc
  *  samples/button/makefile.vc
  *  samples/checkbox/makefile.bcc
  *  samples/checkbox/makefile.gcc
  *  samples/checkbox/makefile.vc
  *  samples/choice/makefile.bcc
  *  samples/choice/makefile.gcc
  *  samples/choice/makefile.vc
  *  samples/combobox/makefile.bcc
  *  samples/combobox/makefile.gcc
  *  samples/combobox/makefile.vc
  *  samples/dbbrowser/makefile.bcc